# testrepo3

./: .coverage  .gitignore  CLAUDE.md  README.md  accept-test.txt  e2e-test-file.md  factory.md  pyproject.toml  test-int-accept-1781560537264.txt  test-int-accept-1781560730485.txt  test-int-accept-1781561031685.txt  test-int-accept-1781561076649.txt  test-int-accept-1781561113714.txt  test-int-reject-1781560562058.txt  test-int-reject-1781560754941.txt  test-int-reject-1781561041840.txt  test-int-reject-1781561091795.txt  test-int-reject-1781561129418.txt  test-int-reject-1781757749235.txt
.github/workflows/: ci.yml
eval/: score.py
tests/: test_cli.py  test_server.py  test_store.py
todo/: __init__.py  cli.py  server.py  store.py
