[project]
name = "todo-cli"
version = "0.1.0"
description = "A simple CLI todo app"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
todo = "todo.cli:main"

[tool.ruff]
exclude = ["eval/"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
